# umgebung

./: .clang-format  .gitignore  .gitmodules  Brewfile  CMakeLists.txt  CNAME  DOCUMENTATION.md  Gemfile  LICENSE-libtess2  LICENSE-tinyfiledialogs  PROCESSING_FUNCTION_AVAILABILITY_STATUS.md  README.md  RELEASE_NOTES.md  SDL3-TRANSITION-ROADMAP.md  TODO.md  TestSketch.cpp  Umgebung.cpp  Umgebung.h  UmgebungDraw.h  UmgebungFunctions.cpp  UmgebungFunctions.h  UmgebungPrint.cpp  UmgebungSketch.h  _config.yml  about.md  index.md  install-RPI.sh  install-linux-apt.sh  install-linux-homebrew.sh  install-linux.sh  install-macOS.sh  main.cpp
.github/workflows/: build-and-setup.yml  build-and-test-umgebung.yml  build-and-test-umgebung.yml.tmp  cmake-single-platform.yml
CMakeModules/: FindFTGL.cmake  FindPortaudio.cmake
_assistant/: compile-git-activity.sh
_includes/: footer.html  header.html
_layouts/: home.html  post.html
_posts/: 2025-02-21-🤖-Summary-2025-01-11>2025-02-21.md  2025-02-24-🤖-Summary-2025-02-22>2025-02-24.md  2025-03-02-🤖-Summary-2025-02-25>2025-03-02.md  2025-03-04-Font-Rendering.md  2025-03-04-Umfeld-Transition.md  2025-03-04-Umgebung-Transition.md  2025-03-04-🤖-Summary-2025-03-03>2025-03-04.md  2025-03-15-🤖-Summary-2025-03-05>2025-03-15.md  2025-03-25-🤖-Summary-2025-03-16>2025-03-25.md  2025-03-27-Umfeld_in_Arduino.md  2025-03-27-Umgebung_in_Arduino.md  2025-03-28-Limbo.md  2025-03-29-Shape-Render-Pipeline.md  2025-04-03-Umfeld-on-Raspberry-Pi.md  2025-04-03-Umgebung on Raspberry Pi.md  2025-04-03-Umgebung-on-Raspberry-Pi.md  2025-04-04-Umfeld--A-C-C++Variant-of-Processing.md  2025-04-04-Umfeld-OpenGL-Support-Table.md  2025-04-04-Umgebung--A-C-C++Variant-of-Processing.md  2025-04-04-Umgebung-OpenGL-Support-Table.md  2025-04-09-The-Ministry-of-Truth-at-Work.md
_sass/: minima.scss
_sass/minima/: _layout.scss
assets/: abstract.md
cmake/: default-post.cmake  default-pre.cmake  pre.cmake
documentation/: DOCUMENTATION.md  PROCESSING_FUNCTION_AVAILABILITY_STATUS.md  Processing-Function-Availability-Status.md  ROADMAP.md  SDL3-TRANSITION-ROADMAP.md  Tested-Setups.md  UMGEBUNG_NEW_FUNCTIONS.md  Umfeld-on-RPI.md  Umgebung-on-RPI.md
example/: CMakeLists.txt  umgebung-example-app.cpp
examples/umgebung-app/: CMakeLists.txt  umgebung-app.cpp
examples/umgebung-audiofile/: CMakeLists.txt  umgebung-playback.cpp
examples/umgebung-example-app/: CMakeLists.txt  umgebung-example-app.cpp
examples/umgebung-simple/: CMakeLists.txt  umgebung-app.cpp
examples/umgebung-with-MIDI/: CMakeLists.txt  umgebung-with-MIDI.cpp
examples/umgebung-with-OSC/: CMakeLists.txt  umgebung-with-OSC.cpp
examples/umgebung-with-klangwellen/: CMakeLists.txt  umgebung-with-klangwellen.cpp
examples/umgebung-with-movie/: CMakeLists.txt  umgebung-with-movie.cpp
examples/umgebung-with-paulstretch/: CMakeLists.txt  umgebung-with-paulstretch.cpp
include/: AudioFile.h  AudioFileReader.h  AudioFileWriter.h  Capture.h  CircularBuffer.h  DrawLib.h  Gamepad.h  Geometry.h  InitIMGui.h  MIDI.h  Movie.h  OSC.h  PApplet.h  PAudio.h  PConstants.h  PFont.h  PFontGeneric.h  PFontSDL.h  PGraphics.h  PGraphicsDefault2D.h  PGraphicsOpenGL.h  PGraphicsOpenGLConstants.h  PGraphicsOpenGLv20.h  PGraphicsOpenGLv33.h  PImage.h  PMesh.h  PShader.h  PShape.h  PVector.h  SimplexNoise.h  StopWatch.h  SubsystemGraphicsOpenGL.h  Subsystems.h  Triangulator.h  UFont.h  UFontPixels.h  Umfeld.h  UmfeldCallbacks.h  UmfeldConstants.h  UmfeldDefines.h  (+21 more)
include/audio/: ADSR.h  AudioFileReader.h  AudioFileWriter.h  AudioSignal.h  AudioUtilities.h  Filter.h  LowPassFilter.h  Reverb.h  Sampler.h  Trigger.h  Wavetable.h
include/clipper2/: clipper.engine.h  clipper.export.h  clipper.offset.h  clipper.rectclip.h
include/dr_libs/: dr_mp3.h
include/ip/: IpEndpointName.h  NetworkingUtils.h  PacketListener.h  TimerListener.h
include/libraries/: SimplexNoise.h  stb_image.h
include/libraries/clipper2/: clipper.core.h  clipper.h  clipper.minkowski.h
include/libraries/dr_libs/: dr_wav.h
include/libraries/ip/: UdpSocket.h
include/libraries/osc/: OscHostEndianness.h  OscPacketListener.h  OscPrintReceivedElements.h  OscReceivedElements.h  OscTypes.h
include/midi/: MIDI.h
include/osc/: MessageMappingOscPacketListener.h  OSC.h  OscException.h  OscOutboundPacketStream.h
include/shaders/: ShaderSource.h  ShaderSourceBasic.h  ShaderSourceColor.h  ShaderSourceColorTexture.h  ShaderSourceDefault.h  ShaderSourceSimple.h
src/: Capture.cpp  Capture.mm  IncludeSingleHeaderLibs.cpp  InitIMGui.cpp  MIDI.cpp  Movie.cpp  PAudio.cpp  PFont.cpp  PGraphics.cpp  PGraphicsOpenGL2.cpp  PGraphicsOpenGLv20.cpp  PGraphicsOpenGLv33.cpp  PImage.cpp  PMesh.cpp  PShader.cpp  PShape.cpp  SimplexNoise.cpp  SingleHeaderLibraryImplementations.cpp  SubsystemAudioPortAudio.cpp  SubsystemAudioSDL.cpp  SubsystemGamepad.cpp  SubsystemGraphicsOpenGLv20.cpp  SubsystemGraphicsOpenGLv33.cpp  SubsystemGraphicsSDL2D.cpp  SubsystemHIDEvents.cpp  SubsystemLibraries.cpp  Umfeld.cpp  UmfeldCallbacks.cpp  UmfeldFunctions.cpp  UmfeldFunctionsAdditional.cpp  UmfeldFunctionsGraphics.cpp  Umgebung.cpp  UmgebungAdapter.cpp  UmgebungCallbacks.cpp  UmgebungDraw.cpp  UmgebungFunctions.cpp  UmgebungFunctionsAdditional.cpp  UmgebungFunctionsGraphics.cpp  UmgebungFunctionsPGraphics.cpp  UmgebungGraphicsNull.cpp  (+13 more)
src.transition/: PApplet.h  PFontFTGL.h  Umgebung.bak.cpp  Umgebung.bak.h  UmgebungAdapter.cpp  UmgebungAdapter.h  UmgebungGraphicsNull.cpp  UmgebungGraphicsOpenGL.cpp  UmgebungImGui.cpp  UmgebungImGui.h
src.transition/research/openglv3/: .clang-format  CMakeLists.txt  PGraphicsOpenGLv33.cpp  PGraphicsOpenGLv33.h  PImage.cpp  PImage.h  PMatrix.h  PMatrix2D.cpp  PMatrix2D.h  PMatrix3D.cpp  PMatrix3D.h  PVector.cpp  PVector.h  Renderer.cpp  Renderer.h  main.cpp
src/clipper/: clipper.engine.cpp  clipper.offset.cpp
src/ip/: IpEndpointName.cpp
src/libtess2/: dict.c  priorityq.c  sweep.c
status/: PApplet.md  PGraphics.md
test/: umgebung_test.cpp
tools/: system_check.cpp
transition/: CMakeLists.txt  SDL3-TRANSITION-RESEARCH.md  main.cpp
(+11 files in other folders)
